--- a/portfolio.html
+++ b/portfolio.html
@@ -71,28 +71,38 @@
                   <div class="art-buttons-frame" style="text-align: justify;">
                     <!-- suptitle -->
                     <div class="row">
-                      <div class="col-12 col-md-6">
-
+                      <div class="col-12 col-md-2">
                         <img src="img/about.PNG" alt="avatar"
-                          style="width: 100%;border-radius: 15px;border: 5px solid #FFC107;">
+                          style="width: 90%;border-radius: 15px;border: 2px solid #FFC107;">
                       </div>
-                      <div class="col-12 col-md-6">
-                        <!-- button -->
-                        <div class="art-lg-text art-code mb-25" style="margin-top: 15px;">Sr. Software Engineer At <span style="color: #FFC107;"
-                            class="txt-rotate" data-period="2000" data-rotate='["WISEMAN INNOVATIONS (I-9)"]'></span>
+                      <div class="col-12 col-md-10">
+                        <div class="art-lg-text art-code mb-25">Software Engineer .Net At <span style="color: #FFC107;"
+                            class="txt-rotate" data-period="2000" data-rotate='["WISEMAN INNOVATIONS"]'></span>
                         </div>
-                        <p style="color: white;">As a seasoned Full Stack Developer, I thrive in
-                          dynamic
-                          environments where innovation
-                          meets real-world problem-solving. At Wiseman Innovations, I leverage a robust tech stack
-                          to design, develop, and optimize sophisticated web applications, ensuring seamless
-                          experiences and high-performance solutions. My expertise spans both backend and frontend
-                          technologies, with a proven track record of delivering scalable and secure solutions
-                          that drive business success.</p>
+                        <!-- button -->
+                        <p style="color: white;">I am a results-driven Software Engineer with over five years of
+                          experience specializing in full stack development within the .NET ecosystem. I have a
+                          proven track record of building scalable web applications and APIs using technologies
+                          such as C#, ASP.NET Core, MVC, Web API, SQL Server, Angular, and Microsoft Azure.
+                          <br> <br>
+                          Currently, I work at DataQ Health (Wiseman Innovations), where I develop and maintain
+                          high-performance healthcare applications for U.S. clients. My past experience includes
+                          contributing to critical software solutions for government and military clients at App
+                          In Snap (Pvt.) Ltd, including projects for the Pakistan Army and JS Bank.
+                          <br> <br>
+                          In addition to my professional roles, I have delivered several freelance projects—from
+                          e-commerce platforms to HR systems—further sharpening my problem-solving and
+                          development skills.
+                          <br>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-12 col-md-12">
                         <div class="art-code"><i>Core Technical Competencies:</i></div>
-
                         <ul style="color: white;">
-                          <li><strong>Backend Development:</strong> Proficient in ASP.NET MVC & Core, SQL Server,
+                          <li><strong>Backend Development:</strong> Proficient in ASP.NET MVC & Core, SQL
+                            Server,
                             and MySQL, leveraging technologies like LINQ and Dapper to build efficient,
                             data-driven solutions.</li>
                           <li><strong>Frontend Development:</strong> Expertise in modern web technologies,
@@ -104,8 +114,10 @@
                             optimize application performance, security, and deployment processes.</li>
                           <li><strong>Version Control & Collaboration:</strong> Strong command of GitHub and TFS
                             for efficient version control, code collaboration, and team coordination.</li>
-                          <li><strong>UI/UX & Graphic Design:</strong> Passionate about enhancing user experience,
-                            blending my development expertise with a solid foundation in graphic design and UI/UX
+                          <li><strong>UI/UX & Graphic Design:</strong> Passionate about enhancing user
+                            experience,
+                            blending my development expertise with a solid foundation in graphic design and
+                            UI/UX
                             principles.</li>
                         </ul>
                         <div class="art-code"><i>Professional Expertise & Impact:</i></div>
@@ -116,11 +128,13 @@
                           <li><strong>Performance Optimization:</strong> Focused on delivering high-performing
                             systems that are both efficient and maintainable, reducing load times and increasing
                             overall application speed.</li>
-                          <li><strong>Collaboration & Innovation:</strong> Known for effective collaboration with
+                          <li><strong>Collaboration & Innovation:</strong> Known for effective collaboration
+                            with
                             cross-functional teams, delivering solutions that meet both technical and business
                             requirements, and driving the adoption of best practices across teams.</li>
                           <li><strong>Scalable Solutions:</strong> Experience building and maintaining
-                            applications that scale with business growth, ensuring that systems remain performant
+                            applications that scale with business growth, ensuring that systems remain
+                            performant
                             and secure under increasing loads.</li>
                         </ul>
                         <p style="color: white;">I am passionate about using my diverse skill set to build
@@ -128,8 +142,9 @@
                           solve complex problems and deliver measurable results. My goal is always to build
                           applications that are not only functional but also provide outstanding user experiences
                           while maintaining the highest standards of code quality and security.</p>
-                        <a href="history.html" class="art-btn art-btn-md"><span>History</span></a>
                       </div>
+
+                      <a href="history.html" class="art-btn art-btn-md"><span>History</span></a>
                     </div>
                   </div>
 
