socail media links

--- a/blog.html
+++ b/blog.html
@@ -664,15 +664,15 @@
                       <i class="fab fa-linkedin-in"></i> LinkedIn
                     </a> |
                     <!-- Facebook link -->
-                    <a href="https://www.facebook.com/weabdulbasit" onclick="openInNewWindowAndReload(event)">
+                    <a href="https://www.facebook.com/iamabdulbaasit" onclick="openInNewWindowAndReload(event)">
                       <i class="fab fa-facebook"></i> Facebook
                     </a> |
                     <!-- Instagram link -->
-                    <a href="https://www.instagram.com/weabdulbasit" onclick="openInNewWindowAndReload(event)">
+                    <a href="https://www.instagram.com/iamabdulbaasit" onclick="openInNewWindowAndReload(event)">
                       <i class="fab fa-instagram"></i> Instagram
                     </a> |
                     <!-- Twitter link -->
-                    <a href="https://x.com/weabdulbasit" onclick="openInNewWindowAndReload(event)">
+                    <a href="https://x.com/iamabdulbaasitx" onclick="openInNewWindowAndReload(event)">
                       <i class="fab fa-twitter"></i> Twitter
                     </a>
                   </div>
