--- a/history.html
+++ b/history.html
@@ -309,7 +309,7 @@
               <div class="art-links-frame p-15-15">
 
                 <!-- download cv button -->
-                <a href="files/cv.txt" class="art-link" download data-no-swup>Download cv <i
+                <a href="files/CV_Abdul Basit_Software_Engineer_July-2025.pdf" class="art-link" download data-no-swup>Download cv <i
                     class="fas fa-download"></i></a>
 
               </div>
@@ -324,11 +324,11 @@
               <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
               <!-- social link -->
-              <a href="https://www.facebook.com/weabdulbasit" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.facebook.com/iamabdulbaasit" target="_blank"><i class="fab fa-facebook"></i></a>
               <!-- social link -->
-              <a href="https://www.instagram.com/weabdulbasit" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/iamabdulbaasit" target="_blank"><i class="fab fa-instagram"></i></a>
               <!-- social link -->
-              <a href="https://x.com/weabdulbasit" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://x.com/iamabdulbaasitx" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <!-- sidebar social end -->
 
@@ -617,6 +617,55 @@
                     <!-- row end -->
 
                   </div>
+
+                  <div class="col-lg-12">
+
+                    <!-- section title -->
+                    <div class="art-section-title">
+                      <!-- title frame -->
+                      <div class="art-title-frame">
+                        <!-- title -->
+                        <h4>Certification</h4>
+                      </div>
+                      <!-- title frame end -->
+                    </div>
+                    <!-- section title end -->
+
+                    <!-- timeline -->
+                    <div class="art-timeline art-gallery">
+                      <div class="art-timeline-item">
+                        <div class="art-timeline-mark-light"></div>
+                        <div class="art-timeline-mark"></div>
+
+                        <div class="art-a art-timeline-content">
+                          <div class="art-card-header">
+                            <div class="art-left-side">
+                              <h5>Project Management</h5>
+                              <div class="art-el-suptitle mb-15">Simplilearn (https://www.simplilearn.com) </div>
+                            </div>
+                            <div class="art-right-side">
+                              <span class="art-date">26 Mar 2025 </span>
+                            </div>
+                          </div>
+                          <a data-fancybox="diplome" data-no-swup href="files/certificate01.jpeg"
+                            class="art-link art-color-link art-w-chevron">Certificate</a>
+                        </div>
+                      </div>
+
+
+                      <div class="art-timeline-item">
+                        <div class="art-timeline-mark-light"></div>
+                        <div class="art-timeline-mark"></div>
+
+                        
+
+                      </div>
+
+                    </div>
+                    <!-- timeline end -->
+
+                  </div>
+
                   <div class="col-lg-12">
 
                     <!-- section title -->
@@ -647,7 +696,7 @@
                             </div>
                           </div>
                           <a data-fancybox="diplome" data-no-swup href="files/certificate.jpg"
-                            class="art-link art-color-link art-w-chevron">Diplome</a>
+                            class="art-link art-color-link art-w-chevron">Certificate</a>
                         </div>
                       </div>
 
@@ -666,7 +715,7 @@
                             </div>
                           </div>
                           <a data-fancybox="diplome" data-no-swup href="files/certificate.jpg"
-                            class="art-link art-color-link art-w-chevron">Diplome</a>
+                            class="art-link art-color-link art-w-chevron">Certificate</a>
                         </div>
                       </div>
 
@@ -686,7 +735,7 @@
                             </div>
                           </div>
                           <a data-fancybox="diplome" data-no-swup href="files/certificate.jpg"
-                            class="art-link art-color-link art-w-chevron">Diplome</a>
+                            class="art-link art-color-link art-w-chevron">Certificate</a>
                         </div>
 
                       </div>
@@ -695,6 +744,7 @@
                     <!-- timeline end -->
 
                   </div>
+                 
                   <!-- col end -->
 
                 </div>
