--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
               <div class="art-links-frame p-15-15">
 
                 <!-- download cv button -->
-                <a href="files/cv.txt" class="art-link" download data-no-swup>Download cv <i
+                <a href="files/CV_Abdul Basit_Software_Engineer_July-2025.pdf" class="art-link" download data-no-swup>Download cv <i
                     class="fas fa-download"></i></a>
 
               </div>
@@ -324,11 +324,11 @@
               <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
               <!-- social link -->
-              <a href="https://www.facebook.com/weabdulbasit" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.facebook.com/iamabdulbaasit" target="_blank"><i class="fab fa-facebook"></i></a>
               <!-- social link -->
-              <a href="https://www.instagram.com/weabdulbasit" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/iamabdulbaasit" target="_blank"><i class="fab fa-instagram"></i></a>
               <!-- social link -->
-              <a href="https://x.com/weabdulbasit" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://x.com/iamabdulbaasitx" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <!-- sidebar social end -->
 
