--- a/history.html
+++ b/history.html
@@ -411,7 +411,7 @@
                             <!-- testimonial body -->
                             <div class="testimonial-body">
                               <!-- name -->
-                              <h5>Working on These Projects</h5>
+                              <h5>Working on These Projects At Wiseman Innovations</h5>
                               <div class="art-el-suptitle mb-15">
                                 <ul>
                                   <li>360 Ribbon Extension</li>
@@ -419,6 +419,7 @@
                                   <li>360 Ribbon Patient Profile</li>
                                   <li>Clarity By Wellvana Extension</li>
                                   <li>Clarity By Wellvana Adoption Portal</li>
+                                  <li>EMR Intergration (Athena, Cerner, ECW, Epic)</li>
                                 </ul>
                               </div>
                             </div>
@@ -460,7 +461,7 @@
                             <!-- testimonial body -->
                             <div class="testimonial-body">
                               <!-- name -->
-                              <h5>Worked on These Projects</h5>
+                              <h5>Worked on These Projects At App In Snap</h5>
                               <div class="art-el-suptitle mb-15">
                                 <ul>
                                   <li>Pakistan Coast Guards</li>
@@ -512,7 +513,7 @@
                             <!-- testimonial body -->
                             <div class="testimonial-body">
                               <!-- name -->
-                              <h5>Teached Following Subject</h5>
+                              <h5>Teached Following Subject At CAPITAL INSTITUTE OF MANAGEMENT SCIENCE</h5>
                               <div class="art-el-suptitle mb-15">
                                 <ul>
                                   <li>Programming Fundamentals.</li>
@@ -586,7 +587,7 @@
                             <!-- testimonial body -->
                             <div class="testimonial-body">
                               <!-- name -->
-                              <h5>Worked on These Projects</h5>
+                              <h5>Worked on These Projects At FREELANCE</h5>
                               <div class="art-el-suptitle mb-15">
                                 <ul>
                                   <li>E-Commerce: website on Drone. (PHP)</li>
