--- a/index.html
+++ b/index.html
@@ -771,77 +771,8 @@
 						<div class="project" style="background-image: url(images/project007.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=oranjeclick.com.healmindbody"
-											target="_blank">HealMindBody</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-						<div class="project" style="background-image: url(images/project008.png);">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=oranjeclick.timepiecehaus"
-											target="_blank">TimePiece Haus</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-						<div class="project" style="background-image: url(images/project001.jpg);">
-							<div class="desc">
-								<div class="con">
-									<h3><a>Kut It</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-						<div class="project" style="background-image: url(images/project002.png);">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.mahsool.market"
-											target="_blank">Mahsool</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-						<div class="project" style="background-image: url(images/project013.png);">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.oranjeclick.esport"
-											target="_blank">E-Soprt E-Commerce App</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
+									<h3><a>Zindagi Finance</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
@@ -850,14 +781,8 @@
 						<div class="project" style="background-image: url(images/project014.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=oranje.konnectus.oranjeclick.konnectus"
-											target="_blank">KonnectUs Marketplace</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
+									<h3><a>Business Services</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
@@ -866,30 +791,8 @@
 						<div class="project" style="background-image: url(images/project003.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.documents.camerascanner.pdfreader"
-											target="_blank">Document Scanner &amp; PDF Scanner</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-						<div class="project" style="background-image: url(images/project004.png);">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.pdfreader.viewdocuments.convert.compressdocuments.mergefiles"
-											target="_blank">PDF Reader and Converter</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
+									<h3><a>Pakistan Coast Guard - Sheet Roll</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
@@ -898,14 +801,78 @@
 						<div class="project" style="background-image: url(images/project005.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.videodownloader.downloadvideos"
-											target="_blank">Video Downloader - Video Saver</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
+									<h3><a>12 Crops</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="project" style="background-image: url(images/project009.png);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>FC Balochistan</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="project" style="background-image: url(images/project011.png);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>Askari Enterprises</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/project008.png);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>Hakeem Nuskha (FYP)</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="project" style="background-image: url(images/project001.jpg);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>Online Grocery Store (FYP)</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/project002.png);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>Noorani Qaida (FYP)</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+						<div class="project" style="background-image: url(images/project013.png);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>Students Advisor System (FYP)</a></h3>
+									<span>Web Application</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<div class="project" style="background-image: url(images/project004.png);">
+							<div class="desc">
+								<div class="con">
+									<h3><a>Wedding Dress (FYP)</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
@@ -914,31 +881,8 @@
 						<div class="project" style="background-image: url(images/project006.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.stickermaker.stickers.createsticker"
-											target="_blank">Sticker Maker for WA</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-						<div class="project" style="background-image: url(images/project009.png);">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=smart.app.lock.master.locker.private.pin.pattern.safe.secure"
-											target="_blank">App Lock - Lock Apps Master</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
+									<h3><a>Food Delivery (FYP)</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
@@ -947,32 +891,8 @@
 						<div class="project" style="background-image: url(images/project010.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.translate.all.language.translator.dictionary.voice.translation"
-											target="_blank">Translate - Voice Translator</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-						<div class="project" style="background-image: url(images/project011.png);">
-							<div class="desc">
-								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.hindi.english.text.typing.translate.keyboard"
-											target="_blank">AOSP Hindi Translator Keyboard</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99<1 /a></span>
-									</p>
+									<h3><a>Property Advisor (FYP)</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
@@ -981,14 +901,8 @@
 						<div class="project" style="background-image: url(images/project012.png);">
 							<div class="desc">
 								<div class="con">
-									<h3><a href="https://play.google.com/store/apps/details?id=com.videotomp3.mp3cutter.mp3merger"
-											target="_blank">Video To Audio - Video To MP3</a></h3>
-									<span>Android Application</span>
-									<p class="icon">
-										<span><a><i class="icon-share3"></i></a></span>
-										<span><a><i class="icon-eye"></i> 100</a></span>
-										<span><a><i class="icon-heart"></i> 99</a></span>
-									</p>
+									<h3><a>Tours Advisor (FYP)</a></h3>
+									<span>Web Application</span>
 								</div>
 							</div>
 						</div>
